--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "app"
   ],
   "dependencies": {
+    "body-parser": "^1.11.0",
+    "cookie-parser": "^1.3.3",
+    "errorhandler": "^1.3.3",
     "express": "latest",
+    "method-override": "^2.3.1",
+    "mongodb": "latest",
     "pg": "latest",
-    "mongodb": "latest"
+    "serve-favicon": "^2.2.0"
   },
   "devDependencies": {
     "grunt": "latest",
